# SecondBrain

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  MISTRAL.md  README.md  deploy.ps1  deploy.sh
adapters/antigravity-cli/: README.md
adapters/antigravity-desktop/: README.md
adapters/claude-code/: claude-md-block.md
adapters/copilot-cli/: copilot-instructions-block.md
adapters/gemini-cli/: GEMINI.md  gemini-extension.json
adapters/mistral-vibe/: instructions-block.md
adapters/obsidian-style/: README.md  graph.json
core/i18n/: strings.yaml
core/procedures/: _archeo-architecture-v2.md  _archive-expander.md  _archived.md  _concurrence.md  _encoding.md  _frontmatter-archeo.md  _frontmatter-universal.md  _linking.md  _mcp-first.md  _memory-structure.md  _repo-paths.md  _repo-topology.md  _router.md  _when-to-script.md  archive.md  mem-archeo-atlassian.md  mem-archeo-context.md  mem-archeo-git.md  mem-archeo-index-files.md  mem-archeo-plan.md  mem-archeo-stack.md  mem-doc.md  (+36 more)
desktop-app/: .coveragerc  README.md  pyproject.toml
desktop-app/src/sb_desktop/: __init__.py  __main__.py  autostart.py  config.py  engine.py  health.py  i18n.py  icons.py  kit_installer.py  logging_setup.py  mcp_client.py  mcp_injector.py  notifications.py  path_env.py  paths.py  status.py  tray.py  update.py  vault_setup.py
desktop-app/src/sb_desktop/i18n/: de.json  en.json  es.json  fr.json  ru.json
desktop-app/src/sb_desktop/ui/: __init__.py  _base.py  confirm_dialog.py  first_run_wizard.py  logs_viewer.py  repair_dialog.py  scan_dialog.py  settings_dialog.py  update_dialog.py
desktop-app/tests/: _engine_fakes.py  conftest.py  test_autostart.py  test_config.py  test_e2e_macos.py  test_engine.py  test_health.py  test_i18n.py  test_icons.py  test_kit_installer.py  test_main.py  test_mcp_client.py  test_mcp_injector.py  test_notifications.py  test_path_env.py  test_paths.py  test_status.py  test_update.py  test_vault_setup.py
mcp-server/: .gitignore  README.md  RELEASE_NOTES_v0.15.0.md  pyproject.toml
mcp-server/src/memory_kit_mcp/: __init__.py  _console.py  archeo_topology.py  config.py  migrate.py  server.py  sync.json  sync.py  update_check.py
mcp-server/src/memory_kit_mcp/archeo/: __init__.py  file_summary.py  topology.py
mcp-server/src/memory_kit_mcp/health/: __init__.py  scan.py
mcp-server/src/memory_kit_mcp/migrations/: __init__.py  v1_zone_indexes.py  v2_namespace_to_domain.py
mcp-server/src/memory_kit_mcp/readers/: __init__.py  csv.py  docx.py  html.py  pdf.py  pptx.py  xlsx.py
mcp-server/src/memory_kit_mcp/tools/: __init__.py  _ingestion.py  _models.py  archeo.py  archeo_atlassian.py  archeo_context.py  archeo_context_finalize.py  archeo_git.py  archeo_index_files.py  archeo_plan.py  archeo_stack.py  archive.py  archive_rewrite_paths.py  check_update.py  digest.py  doc.py  get_topology.py  goal.py  health_repair.py  health_scan.py  help.py  historize.py  ingest.py  init_project.py  list.py  merge.py  migrate.py  note.py  person.py  principle.py  promote_domain.py  read_archive.py  read_context.py  read_history.py  recall.py  reclass.py  relocate_project.py  rename.py  rollback_archive.py  search.py  (+3 more)
mcp-server/src/memory_kit_mcp/vault/: __init__.py  atomic_io.py  frontmatter.py  paths.py  repo_paths.py  scanner.py  sigil.py  topology_scanner.py  wikilinks.py  zone_index.py
mcp-server/tests/: conftest.py  test_archeo.py  test_archeo_context.py  test_archeo_context_finalize.py  test_archeo_git.py  test_archeo_index_files.py  test_archeo_plan.py  test_archeo_stack.py  test_archeo_stubs.py  test_archeo_topology.py  test_archeo_topology_cli.py  test_archive.py  test_archive_archeo_fallback.py  test_archive_rewrite_paths.py  test_archive_sigil.py  test_digest.py  test_file_summary.py  test_get_topology.py  test_health.py  test_help.py  test_historize.py  test_ingestion.py  test_init_project.py  test_list.py  test_merge.py  test_migrate.py  test_migrate_v2_namespace_to_domain.py  test_promote_domain.py  test_read_archive.py  test_read_context.py  test_read_history.py  test_readers.py  test_recall.py  test_reclass.py  test_relocate_project.py  test_rename.py  test_repo_paths.py  test_rollback_archive.py  test_search.py  test_sync.py  (+8 more)
mcp-server/tests/fixtures/vault-skeleton/: index.md
mcp-server/tests/fixtures/vault-skeleton/10-episodes/archived/legacy-app/: context.md  history.md
mcp-server/tests/fixtures/vault-skeleton/10-episodes/domains/shared-infra/: context.md  history.md
mcp-server/tests/fixtures/vault-skeleton/10-episodes/projects/alpha/: context.md  history.md
mcp-server/tests/fixtures/vault-skeleton/10-episodes/projects/alpha/archives/: 2026-04-30-14h00-alpha-initial.md
mcp-server/tests/fixtures/vault-skeleton/10-episodes/projects/beta/: history.md
mcp-server/tests/fixtures/vault-skeleton/10-episodes/projects/beta/archives/: 2026-04-29-10h00-beta-only.md
mcp-server/tests/fixtures/vault-skeleton/99-meta/repo-topology/: alpha.md
memory/: _index.md  index.md
scripts/: enforce-linking.py  fix-double-encoding.py  inject-archeo-hashes.py  inject-display-frontmatter.py  mem-health-scan.py  mem-historize.py  migrate-fix-archeo-atlassian-frontmatter.py  migrate-vault-add-archived-zone.py  migrate-vault-v0.5.py  migrate-vault-v05-to-v052.py  profile-archeo.py  rebuild-vault-index.py  regenerate-adapters-v0.5.ps1  scaffold-vault-v0.5.ps1  scaffold-vault.py  smoke-enumerate.py  smoke-mcp.ps1  validate-archeo-frontmatter.py
(+206 files in other folders)
