[project]
name = "sb-desktop"
version = "0.12.0"
description = "SecondBrain Desktop — systray companion for the Memory Kit engine (in-process)"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    { name = "SI-GMT" },
]
keywords = ["secondbrain", "memory-kit", "systray", "desktop", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Office/Business",
]
dependencies = [
    "pystray>=0.19",
    "pillow>=10.0",
    "plyer>=2.1",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    # memory-kit-mcp is bundled in-process at PyInstaller time. We do NOT
    # declare it as a regular dep here because the engine isn't on PyPI
    # (yet) — it ships via pipx from this same repo. The build script
    # installs it explicitly from ../mcp-server before running PyInstaller.
    # collect_all('memory_kit_mcp') in build/sb-desktop.spec then sweeps
    # it (and its deps: fastmcp, pyyaml, pydantic) into the bundle.
    "fastmcp>=2.13",
]

[project.urls]
Homepage = "https://github.com/SI-GMT/SecondBrain"
Repository = "https://github.com/SI-GMT/SecondBrain"
Issues = "https://github.com/SI-GMT/SecondBrain/issues"

[project.scripts]
sb-desktop = "sb_desktop.__main__:main"

[project.gui-scripts]
sb-desktop-tray = "sb_desktop.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    # The test suite imports the real engine (e.g. tests/test_health.py reaches
    # into memory_kit_mcp.health). It is NOT a runtime/build dep (bundled at
    # PyInstaller time, see [dependencies]) — only the tests need it. Pinned to
    # the local checkout via [tool.uv.sources] so `uv run pytest` works without
    # a manual `uv pip install -e ../mcp-server`.
    "memory-kit-mcp",
]
build = [
    "pyinstaller>=6.10",
]
windows = [
    "windows-toasts>=1.1; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
]
macos = [
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[tool.uv.sources]
# Engine lives in the same repo; the test suite uses it editable. Never
# published to PyPI, so resolve it from the sibling checkout.
memory-kit-mcp = { path = "../mcp-server", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sb_desktop"]

[tool.hatch.build.targets.wheel.shared-data]
"src/sb_desktop/icons" = "sb_desktop/icons"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sb_desktop --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["sb_desktop"]
omit = [
    # GUI surface — requires a live display, exercised via manual integration runs.
    "*tray.py",
    "*ui/*",
    "*ui\\*",
    # Notification backends are platform-specific subprocess fan-outs.
    "*notifications.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
